Fix overlap Project page

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -152,7 +152,6 @@ button.selected {
 }
 
 .project .desc {
-    height: 5vh;
     margin-bottom: 2vh;
 }
 .project .btn {
@@ -350,6 +349,9 @@ button.selected {
 @media only screen and (min-width: 768px)  {
     .action {
         padding: 0 32%;
+    }
+    .project .desc {
+        height: 15vh;
     }
     .experience .titleBlock {
         height: 13vh;
